fix db query and missing header (#55)
* fix db query and missing header

* using monadic joins

* make query results more explicit

* add extra route
