# app/controllers/ObjectController.scala
@@ -20,15 +20,15 @@ package controllers
 
 import java.time.Instant
 import java.util.UUID
-import javax.inject.{ Inject, Singleton }
 
+import javax.inject.{ Inject, Singleton }
 import authorization.JWTVerifierProvider
 import ch.datascience.service.security.{ ProfileFilterAction, TokenFilter }
 import ch.datascience.service.utils.ControllerWithBodyParseJson
 import play.api.libs.concurrent.Execution.Implicits.defaultContext
 import play.api.mvc.{ BodyParsers, Controller, EssentialAction }
 import controllers.storageBackends.{ Backends, ObjectBackend }
-import models.{ FileObject, FileObjectRepository }
+import models.{ FileObject, FileObjectRepository, Repository }
 import models.persistence.DatabaseLayer
 import play.api.Logger
 import play.api.db.slick.HasDatabaseConfig
@@ -58,6 +58,8 @@ class ObjectController @Inject() (
   val default_backend: String = config.getString( "lfs_default_backend" ).get
 
   implicit lazy val FileObjectFormat: OFormat[FileObject] = FileObject.format
+  implicit lazy val RepositoryFormat: OFormat[Repository] = Repository.format
+  implicit lazy val FileObjectRepositoryFormat: OFormat[FileObjectRepository] = FileObjectRepository.format
 
   def listObject( id: String ) = ProfileFilterAction( jwtVerifier.get ).async( BodyParsers.parse.empty ) { implicit request =>
     val json = JsString( id )
@@ -67,6 +69,22 @@ class ObjectController @Inject() (
         val future = db.run( dal.fileObjectRepositories.listByRepository( uuid ) )
         future.map( seq => Json.toJson( seq.map( _._2 ) ) ).map( json => Ok( json ) )
     }
+  }
+
+  def listAllObject( hash: Option[String] ) = ProfileFilterAction( jwtVerifier.get ).async( BodyParsers.parse.empty ) { implicit request =>
+    db.run( hash match {
+      case Some( hashValue ) =>
+        dal.fileObjectRepositories.listByFileObjectHash( hashValue )
+      case None =>
+        dal.fileObjectRepositories.all()
+    } ).map( seq => Json.toJson( seq.map {
+      case ( repository, fileObjectrepository, fielObject ) =>
+        Map(
+          "repository" -> Json.toJson( repository ),
+          "file_object_repository" -> Json.toJson( fileObjectrepository ),
+          "file_object" -> Json.toJson( fielObject )
+        )
+    } ) ).map( json => Ok( json ) )
   }
 
   def createObject( id: String, oid: String ) = EssentialAction { reqh =>
@@ -109,19 +127,22 @@ class ObjectController @Inject() (
       repo_id <- JsString( id ).validate[UUID].asOpt;
       obj_id <- JsString( oid ).validate[UUID].asOpt
     ) yield {
-      db.run( dal.fileObjectRepositories.findByPk( repo_id, obj_id ) ).map( _.headOption.map( f =>
-        backends.getBackend( f._1.backend.getOrElse( default_backend ) ) match {
-          case Some( back ) =>
-            (
-              for ( repo_name <- f._1.iid; obj_name <- f._2._1.iid ) yield {
-                back.asInstanceOf[ObjectBackend].read( request, repo_name, obj_name ) match {
-                  case Some( dataContent ) => Ok.chunked( dataContent )
-                  case None                => NotFound
+      db.run( dal.fileObjectRepositories.findByPk( repo_id, obj_id ) ).map( _.headOption.map {
+        case ( repository, fileObject, _ ) => {
+          backends.getBackend( repository.backend.getOrElse( default_backend ) ) match {
+            case Some( back ) =>
+              (
+                for ( repo_name <- repository.iid; obj_name <- fileObject.iid ) yield {
+                  back.asInstanceOf[ObjectBackend].read( request, repo_name, obj_name ) match {
+                    case Some( dataContent ) => Ok.chunked( dataContent )
+                    case None                => NotFound
+                  }
                 }
-              }
-            ).getOrElse( NotFound )
-          case None => BadRequest( s"The backend ${f._1.backend} is not enabled." )
-        } ).getOrElse( NotFound ) )
+              ).getOrElse( NotFound )
+            case None => BadRequest( s"The backend ${repository.backend} is not enabled." )
+          }
+        }
+      }.getOrElse( NotFound ) )
     }
     valid.getOrElse( Future.successful( BadRequest ) )
   }
