# swagger.yml
@@ -159,7 +159,22 @@ paths:
       security:
       - token_auth:
         - 'profile'
-
+  /object:
+    get:
+      tags:
+      - 'Storage-Object'
+      summary: 'Get the list of objects'
+      description: 'Get the list of objects and their storage locations'
+      responses:
+        200:
+          description: ok
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/FileLocation'
+      security:
+      - token_auth:
+        - 'profile'
   /object/{uuid}:
     get:
       tags:
@@ -331,6 +346,33 @@ definitions:
         type: string
       owner:
         type: string
+  FileObjectRepository:
+      type: object
+      required:
+        - object_uuid
+        - repo_uuid
+      properties:
+        object_uuid:
+          type: string
+        repo_uuid:
+          type: string
+        iid:
+          type: string
+        created:
+          type: string
+  FileLocation:
+      type: object
+      required:
+        - repository
+        - file_object_repository
+        - file_object
+      properties:
+        repository:
+          $ref: '#/definitions/Repository'
+        file_object_repository:
+          $ref: '#/definitions/FileObjectRepository'
+        file_object:
+          $ref: '#/definitions/FileObject'
 securityDefinitions:
   token_auth:
     type: "oauth2"
